--- a/index.html
+++ b/index.html
@@ -5,16 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ishqha's PW Generator Tool</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="./assets/js/script-pw.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
+        <script src="./assets/js/script-pw2.js"></script>
+
 </head>
 <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-    </body>
+    <section class="login">
+        <form method="post">
+            <h1>My Password Generator!</h1>
+            <div class="mt-5 mb-5"></div>
+            <div class="mb-3">
+                <input class="form-control" type="text" id="pass" placeholder="Click the Generate Password Button">
+            </div>
+            <div class="mb-3 ">
+                <button class="btn btn-primary re w-100 " type="button" onclick="copy()">
+                    <i class="fa fa-copy "></i>&nbsp; Copy</button>
+                <button class="btn btn-primary d-block w-100 " type="button" style="background: var(--bs-indigo); " onclick="generatePW();">Generate</button>
+            </div>
+        </form>
+        <div id="toast">Password Generated and Copied!</div>
+    </section>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./assets/js/script-pw2.js"></script>
 
 </body>
 </html>
